<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Name"/>

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Surname"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/register"
        android:text="Register"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

</LinearLayout>
